src/app/central-section/board/board.component.css
.board_shadow {
  display: block;
  position: absolute;
  left: 50%;
  top: 60%;
  transform: translate(-50%,-50%);
  width: 80%;
  height: 80%;
  background-color: grey;
  -webkit-filter: blur(25px);
  -ms-filter: blur(25px);
  filter: blur(25px);
  z-index: -1;
}

.board_container {
  display: block;
  position: absolute;
  left: 0;
  top: 8%;
  width: 100%;
  height: 77%;
}

.stones_container {
  display: block;
  position: absolute;
  left: 0;
  top: 8%;
  width: 100%;
  height: 70%;
}

.last-stone-dot {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 45%;
  height: 45%;
  border-radius: 50%;
  background-color: rgb(0,0,0,1);
}

.intersection {
  display: block;
  position: absolute;
  width: 5%;
  height: 5%;
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.letter_on_board {
  display: flex;
  justify-content: center;
  align-items: center;

  transition: .3s ease;
  font-family: 'Secular One', sans-serif;
  font-size: 3vh;
  background: #FFE3C3;
}

.white_letter {
  text-shadow: 0 0 3px black;
  color: white;
}

.black_letter {
  color: black;
}

.blue_stone {
  width: 4.5%;
  height: 4.5%;
  background-image: radial-gradient(#0000ff, #0000e6, #0000ce, #0000d2);
  box-shadow: 0 0 3px 1px blue;
}

.white_stone {
  width: 4.6%;
  height: 4.6%;
  background-image: radial-gradient(white, #e6e6e6, #cecece, #d2d2d2);
  box-shadow: 0 0 3px .5px black;
}

@media screen and (max-width: 960px) {
  .board_container {top: 50px; width: 100vw; height: 110vw;}
  .stones_container {position: relative; width: 100vw; height: 100vw;}
}

